# ds-contest-tools

./: .gitignore  404.html  LICENSE  MANIFEST.in  README.md  boca.py  build.py  checker.py  config.py  contest-config.json  contest.json  contest.py  convert.py  fileutils.py  htmlutils.py  index.html  jsonutils.py  latexutils.py  legacy_converter.py  logger.py  metadata.py  mkdocs.yml  paths.py  pdfutils.py  polygon_connection.py  polygon_converter.py  polygon_submitter.py  pyproject.toml  run.py  search.html  sqtpm.py  statement_converter.py  toolchain.py  utils.py
Maratona/: maratona.cls
arquivos/: CMakeLists.txt  Makefile  maratona.cls  problem-interactive.json  problem.json  sqtpm.sh  sqtpm_io.sh  statement-interactive.md  statement.md
arquivos/boca/compare/: cpp  java
arquivos/boca/compile/: cpp
arquivos/include/: testlib.h
arquivos/src/: ac.cpp  checker.cpp  generator.cpp  testlib.h  validator.cpp
commands/: index.html
contributing/: index.html
credits/: index.html
docs/: README.md  commands.md  contributing.md  credits.md  documentation.md  index.md  installation.md  license.md  overview.md  release-notes.md
documentation/: index.html
ds_contest_tools/: __init__.py  boca.py  build.py  checker.py  config.py  contest.py  convert.py  ds_contest_tools.py  fileutils.py  htmlutils.py  jsonutils.py  latexutils.py  legacy_converter.py  logger.py  metadata.py  pdfutils.py  polygon_connection.py  polygon_converter.py  polygon_submitter.py  sqtpm.py  toolchain.py  utils.py
ds_contest_tools/Maratona/: Capa.tex
ds_contest_tools/docs/: README.md
ds_contest_tools/files/: GraderMakefile  Makefile  Makefile_grader  maratona.cls  problem-interactive.json  problem.json
ds_contest_tools/files/assets/: VmMemoryTest.java  test-case-info.html  vm_memory_test.py
ds_contest_tools/files/assets/scripts/: app.js
ds_contest_tools/files/boca/compile/: c
ds_contest_tools/files/boca/limits/: py3
ds_contest_tools/files/src/: grader.cpp  grader.h  testlib.h
ds_contest_tools/parsers/: build.py  clean.py  common.py  contest.py  convert.py  gen.py  init.py  set_keys.py
files/: Makefile  problem-interactive.json  problem.json  sqtpm.sh
files/assets/scripts/: app.js
files/assets/style/: bootstrap.css
files/boca/compile/: cpp
files/boca/description/: problem.info
files/boca/limits/: cpp
files/src/: checker.cpp  interactor.cpp  testlib.h  validator.cpp
installation/: index.html
license/: index.html
overview/: index.html
release-notes/: index.html
search/: search_index.json
